<resources>

    <string name="app_name">Project_Aapp</string>
    <string name="action_settings">Settings</string>

    <string name="welcome">Góðan Daginn</string>
    <string name="name">Guðmundur Halldór</string>
    <string name="edru">Þú hefur verið edrú í </string>
    <string name="dagar">18 Mánuði og 10 Daga </string>
    <string name="tasks">Dagbók</string>
    <string name="emotions">Tilfinningar</string>
    <string name="steps">12 Spor </string>
    <string name="aboutme">Ég</string>
    <string name="settings">Stillingar</string>
    <string name="results">Árangur</string>
    <string name="sponsor">Sponsor</string>
    <string name="goals">Markmið</string>
    <string name="help">Hjálp</string>


    <string name="spor1">1. Við viðurkenndum vanmátt okkar gagnvart áfengi og að við gætum ekki lengur stjórnað eigin lífi.</string>
    <string name="spor2">2. Við fórum að trúa að máttur okkur æðri gæti gert okkur andlega heilbrigð að nýju.</string>
    <string name="spor3">3. Við tókum þá ákvörðun að fela líf okkar og vilja umsjá Guðs, samkvæmt skilningi okkar á honum.</string>

    <string name="spor4">4. Við gerðum rækilega og óttalaust siðferðileg reikningsskil í lífi okkar.</string>
    <string name="spor5">5. Við játuðum misgjörðir okkar fyrir Guði, sjálfum okkur og annarri manneskju og nákvæmlega hvað í þeim fólst.</string>
    <string name="spor6">6. Við vorum þess albúin að láta Guð fjarlægja alla skapgerðarbrestina.</string>
    <string name="spor7">7. Við báðum Guð í auðmýkt að losa okkur við brestina</string>
    <string name="spor8">8. Við skráðum misgjörðir okkar gagnvart náunganum og urðum fús til að bæta fyrir þær.</string>
    <string name="spor9">9. Við bættum fyrir brot okkar milliliðalaust svo framarlega sem það særði engan.</string>
    <string name="spor10">10. Við iðkuðum stöðuga sjálfsrannsókn og þegar út af bar viðurkenndum við yfirsjónir okkar umsvifalaust.</string>
    <string name="spor11">11. Við leituðumst við með bæn og hugleiðslu að styrkja vitundarsamband okkar við Guð, samkvæmt skilningi okkar á honum, og báðum um það eitt að vita vilja hans og hafa mátt til að framkvæma hann.</string>
    <string name="spor12">12. Við urðum fyrir andlegri vakningu er við stigum þessi spor og reyndum því að flytja öðrum alkóhólistum þennan boðskap og fylgja þessum meginreglum í lífi okkar og starfi.</string>


    <string name="aboutme1"></string>

    <string name="title_activity_task">TaskActivity</string>

    <string name="title_activity_sponsor">SponsorActivity</string>

    <string name="title_activity_steps">Steps</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_results">Results</string>
    <string name="title_activity_goals">Goals</string>
    <string name="title_activity_emotions">Emotions</string>
    <string name="title_activity_me">Me</string>
    <string name="title_activity_settings">Settings</string>

    <string name="title_activity_change_sponsor">ChangeSponsorActivity</string>

    <string name="nameHolder">Nafn</string>
    <string name="phoneno">Símanúmer</string>
    <string name="soberdate">Edrú síðan</string>
    <string name="change">Breyta</string>
    <string name="firstname">Fornafn</string>
    <string name="lastname">Eftirnafn</string>
    <string name="date_selected"></string>

    <string name="date_button">Velja</string>

    <string name="vista">Vista breytingar</string>
    <string name="hringja">Hringja</string>

    <string name="date_button_set">Set Date</string>
    <string name="hello">Góðan Daginn!</string>
    <string name="title_activity_goal_list">GoalListActivity</string>


    <string name="crime_title_label">Title</string>
    <string name="crime_title_hint">Enter a title for this crime.</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tasktexti">Ýttu á þau atriði sem þú hefur lokið við í dag</string>
    <string name="thittMarkmid">Hvert er þitt markmið?</string>
    <string name="lysamarkmid">Lýstu markmiði þínu nánar</string>
    <string name="solved">Hefur þú náð markmiðinu?</string>
    <string name="markmidatexti">Markmið</string>
    <string name="markmidaskyring">Ýttu á takkann til að bæta við markmiði. Ýttu á markmiðið sjálft til þess að uppfæra/breyta því</string>

    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_goal">GoalActivity</string>
    <string name="title_newactivity_goal">NewGoalActivity</string>


    <string name="nyttmarkmid">Nýtt Markmið</string>
    <string name="title_activity_new_goal">NewGoalActivity</string>
    <string name="demo">Dummy útgáfa</string>
    <string name="emotionque">Farðu yfir daginn í dag. Hvernig hefur þú tekist á við </string>
    <string name="anger">Reiði?</string>
    <string name="mjogvel">4. Mjög vel</string>
    <string name="vel">3. Vel</string>
    <string name="ago">2. blabla</string>
    <string name="saemo">1. Sæmilega</string>
    <string name="mjogilla">0. Mjög Illa</string>
    <string name="appname">Aapp</string>
    <string name ="hjalp1"> hjálpar þér að halda rútínu og hafa stjórn á fíkn þinni.  </string>
    <string name ="hjalp2">Ýttu á "ÉG" á forsíðu appsins til að frumstilla appið svo þú getir nýtt þér teljarann á forsíðunni.</string>
    <string name="hjalp3">Ýttu á "DAGBÓK" til að fylla út atriði dagsins og skoðaðu árangur þinn í "ÁRANGUR </string>
    <string name="hjalp4">Settu þér SMART markmið með því að ýta á "MARKMIÐ" takkann á forsíðunni.</string>
    <string name="hjalp5">Haltu svo fokkking kjafti og fáðu þér vín</string>
    <string name="comingSoon">Stillingarmöguleikar koma von bráðar.</string>
    <string name="resulttext">Fjöldi atriða sem þú hefur lokið við síðustu vikuna</string>



</resources>
