<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="is.hi.project_aapp.Emotions.Emotions"
    tools:showIn="@layout/activity_emotion"
    android:orientation="vertical"
    android:background="@color/back">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/extrasmalltext"
        android:text="dummy"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="@string/emotionque"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/bigtext"
        android:textAlignment="center"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/anger"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/bigtext"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/big"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="@dimen/smallest"
            android:layout_marginBottom="@dimen/smallest"
            android:layout_marginRight="@dimen/smallest"
            android:drawableRight="@mipmap/ic_done_white_48dp"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/white"
            android:textSize="@dimen/mediumtext"
            android:textAlignment="center"
            android:text="@string/mjogvel"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="@dimen/smallest"
            android:layout_marginBottom="@dimen/smallest"
            android:layout_marginRight="@dimen/smallest"
            android:drawableRight="@mipmap/ic_done_white_48dp"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/white"
            android:textSize="@dimen/mediumtext"
            android:textAlignment="center"
            android:text="@string/vel"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="@dimen/smallest"
            android:layout_marginBottom="@dimen/smallest"
            android:layout_marginRight="@dimen/smallest"
            android:drawableRight="@mipmap/ic_done_white_48dp"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/white"
            android:textSize="@dimen/mediumtext"
            android:textAlignment="center"
            android:text="@string/ago"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="@dimen/smallest"
            android:layout_marginBottom="@dimen/smallest"
            android:layout_marginRight="@dimen/smallest"
            android:drawableRight="@mipmap/ic_done_white_48dp"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/white"
            android:textSize="@dimen/mediumtext"
            android:textAlignment="center"
            android:text="@string/saemo"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="@dimen/smallest"
            android:layout_marginBottom="@dimen/smallest"
            android:layout_marginRight="@dimen/smallest"
            android:drawableRight="@mipmap/ic_done_white_48dp"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/white"
            android:textSize="@dimen/mediumtext"
            android:textAlignment="center"
            android:text="@string/mjogilla"/>
    </LinearLayout>
</LinearLayout>
