<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:weightSum="100"
        >

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:background="@color/back"
            >

        <TextView
                android:text="@string/welcome"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/big"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big"
                android:id="@+id/welcome"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Guðmundur Halldór"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="@dimen/medium"
                android:layout_marginBottom="@dimen/small"
                android:textAlignment="center"
                android:textSize="@dimen/biggest"
                android:textStyle="bold"
                android:id="@+id/name"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edru"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:textSize="@dimen/big"
                android:layout_alignBottom="@+id/name"
                android:id="@+id/edru"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dagar"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/medium"
                android:layout_marginBottom="@dimen/nulls"
                android:layout_marginLeft="@dimen/smallest"
                android:layout_marginRight="@dimen/smallest"
                android:textAlignment="center"
                android:textSize="@dimen/big"
                android:layout_alignBottom="@+id/edru"
                android:id="@+id/dagar"/>

    </LinearLayout>



    <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="50"
            android:layout_centerHorizontal="true"
            android:background="@color/colorAccent">


        <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.9"
                    android:text="@string/tasks"
                    android:gravity="bottom|center"
                    android:drawableTop="@mipmap/ic_check_circle_white_48dp"
                    android:backgroundTint="@color/colorAccent"
                    android:textColor="@color/white"
                    android:padding="@dimen/smallest"
                    android:onClick="onTasksClick"
                    android:id="@+id/tasks"
                    android:layout_margin="@dimen/nulls"
                    />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom|center"
                android:drawableTop="@mipmap/ic_insert_comment_white_48dp"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/white"
                android:text="@string/emotions"
                android:paddingBottom="@dimen/smallest"
                android:paddingTop="@dimen/smallest"
                android:paddingLeft="@dimen/nulls"
                android:paddingRight="@dimen/nulls"
                android:onClick="onEmotionsClick"
                android:id="@+id/emotions"
                />

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="bottom|center"
                    android:text="@string/results"
                    android:onClick="onResultsClick"
                    android:drawableTop="@mipmap/ic_timeline_white_48dp"
                    android:backgroundTint="@color/colorAccent"
                    android:textColor="@color/white"
                    android:padding="@dimen/smallest"
                    android:id="@+id/results"
                    />

        </TableRow>


        <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center" >

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="bottom|center"
                    android:text="@string/goals"
                    android:onClick="onGoalsClick"
                    android:drawableTop="@mipmap/ic_event_available_white_48dp"
                    android:backgroundTint="@color/colorAccent"
                    android:textColor="@color/white"
                    android:padding="@dimen/smallest"
                    android:id="@+id/goals"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/steps"
                    android:drawableTop="@mipmap/ic_list_white_48dp"
                    android:backgroundTint="@color/colorAccent"
                    android:textColor="@color/white"
                    android:padding="@dimen/smallest"
                    android:gravity="bottom|center"
                    android:text="@string/steps"
                    android:onClick="on12stepsClick"
                     />

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="bottom|center"
                    android:drawableTop="@mipmap/group_48dp"
                    android:backgroundTint="@color/colorAccent"
                    android:textColor="@color/white"
                    android:padding="@dimen/smallest"
                    android:text="@string/sponsor"
                    android:id="@+id/sponsor"
                android:onClick="onSponsorClick"/>
        </TableRow>

        <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                >

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="bottom|center"
                    android:drawableTop="@mipmap/ic_face_white_48dp"
                    android:backgroundTint="@color/colorAccent"
                    android:textColor="@color/white"
                    android:padding="@dimen/smallest"
                    android:text="@string/aboutme"
                    android:onClick="onMeClick"
                    android:id="@+id/aboutme"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="bottom|center"
                    android:drawableTop="@mipmap/ic_settings_white_48dp"
                    android:backgroundTint="@color/colorAccent"
                    android:textColor="@color/white"
                    android:paddingBottom="@dimen/smallest"
                    android:paddingTop="@dimen/smallest"
                    android:paddingLeft="@dimen/nulls"
                    android:paddingRight="@dimen/nulls"
                    android:text="@string/settings"
                    android:onClick="onSettingsClick"
                    android:id="@+id/settings" />

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="bottom|center"
                    android:drawableTop="@mipmap/ic_help_white_48dp"
                    android:backgroundTint="@color/colorAccent"
                    android:textColor="@color/white"
                    android:padding="@dimen/smallest"
                    android:onClick="onHelpClick"
                    android:text="@string/help"
                    android:id="@+id/help"/>
        </TableRow>
    </TableLayout>


</LinearLayout>